Checks the bounds before proceeding for calculating the edge

BUG: 412804